--- a/cyclorun/.gitignore
+++ b/cyclorun/.gitignore
@@ -5,5 +5,6 @@ wp-config.php
 /content/upgrade
 /content/uploads
 /content/plugins/*
+!/cotent/plugis/custom-table-wp_outing
 /content/themes/*
 !/content/themes/cyclorun
