--- a/cyclorun/composer.json
+++ b/cyclorun/composer.json
@@ -10,7 +10,8 @@
         "wpackagist-plugin/akismet": "*",
         "wpackagist-theme/twentytwenty": "*",
         "wpackagist-plugin/what-the-file": "^1.5",
-        "wpackagist-plugin/simply-show-hooks": "^1.2"
+        "wpackagist-plugin/simply-show-hooks": "^1.2",
+        "wpackagist-plugin/contact-form-7": "^5.1"
     },
     "extra": {
         "wordpress-install-dir": "wp",
