--- a/cyclorun/content/themes/cyclorun/package.json
+++ b/cyclorun/content/themes/cyclorun/package.json
@@ -31,10 +31,6 @@
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
-    "bootstrap": "^4.5.0",
-    "file-loader": "^6.0.0",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.4.1",
-    "reset-css": "^5.0.1"
+    "jquery": "^3.4.1"
   }
 }
