--- a/cyclorun/.htaccess
+++ b/cyclorun/.htaccess
@@ -8,12 +8,18 @@ RewriteRule ^(.*)$ index.php/$1
 # généré dynamiquement, et ne doivent uniquement être modifiées via les filtres WordPress.
 # Toute modification des directives entre ces marqueurs sera outrepassée.
 <IfModule mod_rewrite.c>
+# BEGIN WordPress
+# Les directives (lignes) entre 'BEGIN WordPress' et 'END WordPress' sont
+# généré dynamiquement, et ne doivent uniquement être modifiées via les filtres WordPress.
+# Toute modification des directives entre ces marqueurs sera outrepassée.
+<IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /Projets/projet-cycl-o-run/cyclorun/
+RewriteBase /projet-cycl-o-run/cyclorun/
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /Projets/projet-cycl-o-run/cyclorun/index.php [L]
+RewriteRule . /projet-cycl-o-run/cyclorun/index.php [L]
 </IfModule>
+# END WordPress
 
 # END WordPress
