--- a/cyclorun/.htaccess
+++ b/cyclorun/.htaccess
@@ -1,20 +1,14 @@
-RewriteEngine on
-RewriteCond %{REQUEST_URI} !^wp/
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php/$1
 # BEGIN WordPress
-# Les directives (lignes) entre 'BEGIN WordPress' et 'END WordPress' sont
-# généré dynamiquement, et ne doivent uniquement être modifiées via les filtres WordPress.
-# Toute modification des directives entre ces marqueurs sera outrepassée.
+# The directives (lines) between `BEGIN WordPress` and `END WordPress` are
+# dynamically generated, and should only be modified via WordPress filters.
+# Any changes to the directives between these markers will be overwritten.
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /Apotheose/projet-cycl-o-run/cyclorun/
+RewriteBase /Projets/projet-cycl-o-run/cyclorun/
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /Apotheose/projet-cycl-o-run/cyclorun/index.php [L]
+RewriteRule . /Projets/projet-cycl-o-run/cyclorun/index.php [L]
 </IfModule>
-
 
 # END WordPress
