--- a/cyclorun/content/themes/cyclorun/package.json
+++ b/cyclorun/content/themes/cyclorun/package.json
@@ -35,6 +35,7 @@
     "file-loader": "^6.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "mapbox-gl": "^1.10.1",
     "reset-css": "^5.0.1"
   }
 }
