--- a/cyclorun/composer.json
+++ b/cyclorun/composer.json
@@ -11,7 +11,8 @@
         "wpackagist-theme/twentytwenty": "*",
         "wpackagist-plugin/what-the-file": "^1.5",
         "wpackagist-plugin/simply-show-hooks": "^1.2",
-        "wpackagist-plugin/advanced-custom-fields": "^5.8"
+        "wpackagist-plugin/advanced-custom-fields": "^5.8",
+        "wpackagist-plugin/ml-slider": "^3.16"
     },
     "extra": {
         "wordpress-install-dir": "wp",
