--- a/cyclorun/.gitignore
+++ b/cyclorun/.gitignore
@@ -3,7 +3,7 @@
 /wp-config.php
 /content/languages
 /content/upgrade
-/content/uploads
+!/content/uploads
 /content/plugins/*
 !/content/plugins/custom-table-wp_outing
 /content/themes/*
